--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.0'
-    ext.room_version = '2.1.0-alpha01'
+    ext.kotlin_version = '1.3.70'
+    ext.room_version = '2.2.4'
     ext.navigation_version = '1.0.0-alpha06'
     ext.kodein_version = '5.2.0'
     ext.lifecycle_version = '2.0.0'
@@ -13,9 +13,9 @@ buildscript {
         maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0-alpha02'
+        classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha07'
+        classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
